<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/lightgreen"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="56dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="48dp" />

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="46dp" />

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailid"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="60dp" />

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tizzkey"
        android:id="@+id/textView5"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_above="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:textColor="@color/blue" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_above="@+id/textView3"
        android:layout_toRightOf="@+id/textView" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailid"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_above="@+id/register"
        android:layout_toRightOf="@+id/name"
        android:layout_toEndOf="@+id/name" />





    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_marginTop="33dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/register"
        android:background="@color/brown"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tizzkey"
        android:layout_above="@+id/register"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />


</RelativeLayout>